--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ body {
 	background-image: url("drop2dom7.jpg");
 }
 
-#cta {
+.cta {
 	display: block;
 	margin: 0 auto; 
 	height: 30px;
@@ -115,7 +115,7 @@ body {
 	color: white;
 }
 
-#cta p {
+.cta p {
 	padding-top: 5px;
 }
 
